--- a/CPS410Final/TODO.txt
+++ b/CPS410Final/TODO.txt
@@ -27,6 +27,10 @@ Subject.aspx
 2) If a new subject is being created with a name as an already existing Subject, prompt user to confirm that they wish to create
 	a subject with the same name.
 
+Topic.aspx
+----------
+1) If a new topic is being created with a name as an already existing topic, prompt user to confirm that they wish to create
+	a topic with the same name.
 
 Thread.aspx
 -------------
