--- a/CPS410Final/TODO.txt
+++ b/CPS410Final/TODO.txt
@@ -47,12 +47,8 @@ Account.cs
 
 Database.cs/Login.aspx
 ----------------------
-1) Set an error message when, upon login attempt, no user with that information is found
-
-General
--------
-1) Store account status in session state object or cookie (I.E., "logged in/out", "role", etc.)
-2) Log out button
+1) Set an error message when, upon login attempt, no user with that information is found\
+2) ON DATABASE FILES, comment each one and explain what the fields are supposed to be
 
 
 Admin Console
@@ -60,3 +56,12 @@ Admin Console
 1) Assign users new roles
 2) Create new Subjects (all users can create posts, only admins can create subjects)
 3) Delete/Ban users, delete/rename Subjects
+
+
+FOR EACH DIV ON ACCOUNT PAGE
+----------------------------
+1) Add a status label. So for passwords, it would be a label with id "lblPasswordStatus". Check the Account.aspx.cs class for what the labels
+	should be called.
+2) If the user currently logged in is a tutor, at the bottom of the menu on the left side show a new div that is labeled
+	something like "Tutor Information". This is strictly for tutors to fill out their "tutor profile" (e.g., places of employment,
+	degrees earned, years of experience, etc.)
