Updated to current status

--- a/CPS410Final/TODO.txt
+++ b/CPS410Final/TODO.txt
@@ -1,7 +1,5 @@
 ﻿Security.cs Class
 -----------------
-DONE -- 1) Create a way to generate a salt, append that to the user's password, and hash it.
-1a) Can that same method be used to authenticate when logging in? If not, create another method
 2) Handle some sort of password requirements (length, character requirements, etc.)
 3) Handle changing passwords, forgotten passwords, forgotten usernames, etc.
 
@@ -14,35 +12,38 @@ Registration.aspx
 
 
 Login.aspx
-----------
+-----------------
 1) Display an option for forgotten username or password
-2) Display an error message based on invalid username and/or password
-3) Button that leads to the registration page
 
+
+
+-%-%-%-%-%-%-%-%-%-%DISCUSSION BOARD RELATED%-%-%-%-%-%-%-%-%-%-
 
 Subject.aspx
---------------
+-----------------
 **Refer to iFinal**
 1) Display a list of threads
 2) If a new subject is being created with a name as an already existing Subject, prompt user to confirm that they wish to create
 	a subject with the same name.
 
 Topic.aspx
-----------
+-----------------
 1) If a new topic is being created with a name as an already existing topic, prompt user to confirm that they wish to create
 	a topic with the same name.
 
 Thread.aspx
--------------
+-----------------
 **Refer to iFinal**
 1) Display the posts in order based on time
 2) 
 
+-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
+
+
 
 Account.cs
-------------
-1) Allow for changing of outward facing username (have to implement database actions that changes the username everywhere)
-2) Allow for differentiation of high school students and college students. Probably have to have that upon registration initially.
+-----------------
+1) Possibly link to a new page showing an example of what to write for a tutor AND for a student
 
 
 Database.cs/Login.aspx
@@ -52,7 +53,7 @@ Database.cs/Login.aspx
 
 
 Admin Console
--------------
+-----------------
 1) Assign users new roles
 2) Create new Subjects (all users can create posts, only admins can create subjects)
 3) Delete/Ban users, delete/rename Subjects
