--- a/CPS410Final/TODO.txt
+++ b/CPS410Final/TODO.txt
@@ -1,68 +1,7 @@
-﻿Security.cs Class
------------------
-2) Handle some sort of password requirements (length, character requirements, etc.)
-3) Handle changing passwords, forgotten passwords, forgotten usernames, etc.
+﻿
 
-
-Registration.aspx
------------------
-1) Handle the page elements depending on if the user will be a student or a tutor.
-	I.E., show/hide different elements depending on the user selection (methods based on the first selection of a tutor or student that only show specific elements)
-
-
-Login.aspx
------------------
-1) Display an option for forgotten username or password
-
-
-
--%-%-%-%-%-%-%-%-%-%DISCUSSION BOARD RELATED%-%-%-%-%-%-%-%-%-%-
-
-Subject.aspx
------------------
-**Refer to iFinal**
-
-    CONSTRAINT [FK_PostsThreadID] FOREIGN KEY ([UserID]) REFERENCES [dbo].[Threads] ([ThreadID]),    CONSTRAINT [FK_PostsThreadID] FOREIGN KEY ([UserID]) REFERENCES [dbo].[Threads] ([ThreadID]),    CONSTRAINT [FK_PostsThreadID] FOREIGN KEY ([UserID]) REFERENCES [dbo].[Threads] ([ThreadID]),    CONSTRAINT [FK_PostsThreadID] FOREIGN KEY ([UserID]) REFERENCES [dbo].[Threads] ([ThreadID]),    CONSTRAINT [FK_PostsThreadID] FOREIGN KEY ([UserID]) REFERENCES [dbo].[Threads] ([ThreadID]),    CONSTRAINT [FK_PostsThreadID] FOREIGN KEY ([UserID]) REFERENCES [dbo].[Threads] ([ThreadID]),    CONSTRAINT [FK_PostsThreadID] FOREIGN KEY ([UserID]) REFERENCES [dbo].[Threads] ([ThreadID]),
-
-Thread.aspx
------------------
-**Refer to iFinal**
-1) Display the posts in order based on time
-2) 
-
--%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
-
-
-
-Account.cs
------------------
-1) Possibly link to a new page showing an example of what to write for a tutor AND for a student
-2) DECIDE two things:
-	a) Decide on redirect to "Edit information" once a new account is registered
-	b) Decide if all fields on edit information should be required (for students)
-
-Database.cs/Login.aspx
-----------------------
-
+    CONSTRAINT [FK_PostsThreadID] FOREIGN KEY ([UserID]) REFERENCES [dbo].[Threads] ([ThreadID])
 
 Admin Console
 -----------------
 3) Delete/Ban users, delete/rename Subjects
-
-
-FOR EACH DIV ON ACCOUNT PAGE
-----------------------------
-1) Add a status label. So for passwords, it would be a label with id "lblPasswordStatus". Check the Account.aspx.cs class for what the labels
-	should be called.
-2) 
-
-
-TAYLOR
-------
-1) Think about creating a dropdownlist for selecting majors and binding it to a database table that is filled with possible majors
-	a) would have to allow nulls
-	b) would have to include an option for users to request a major to be added
-	c) talk to brad about only having one account information page based on student/tutor (i.e., a tutor account can only see the tutor information page)
-2) On Account.aspx page, when logged in, pull their data into the appropriate page control (if the data exists)
-3) fix account overview, add the information the account has in the database
-4) double check the edit information tab under account page to see if the information actually gets processed
